# notebookflow

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  Dockerfile  NotebookFlow _standalone_.html  README.md  biome.json  eslint.config.js  fly.toml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/adr/: 0001-execution-isolation.md  0002-engine-deployment.md
engine/: README.md  pyproject.toml
engine/notebookflow/: __init__.py  auth.py  proxy.py  ratelimit.py  server.py
engine/notebookflow/core/: __init__.py  dag.py  databus.py  executor.py  triggers.py
engine/notebookflow/llm/: __init__.py  ask.py  client.py  code_synth.py  credentials.py  explainer.py  pipeline_author.py
engine/notebookflow/nodes/: __init__.py
engine/notebookflow/nodes/ai/: __init__.py
engine/notebookflow/nodes/input/: __init__.py
engine/notebookflow/nodes/io/: __init__.py
engine/notebookflow/nodes/output/: __init__.py
engine/notebookflow/nodes/transform/: __init__.py
engine/notebookflow/protocol/: __init__.py  loader.py  manifest.py  registry.py
engine/tests/: conftest.py  test_ask.py  test_builtin_nodes.py  test_credentials.py  test_dag.py  test_databus.py  test_executor.py  test_explainer.py  test_llm_client.py  test_loader.py  test_pipeline_author.py  test_proxy.py  test_ratelimit.py  test_registry.py  test_server.py  test_triggers.py
examples/: demo.ipynb  model_advanced.ipynb  model_baseline.ipynb  postprocessing.ipynb  preprocessing.ipynb
examples/.ipynb_checkpoints/: demo-checkpoint.ipynb
node-library-spec/: CONTRIBUTING.md  node_manifest.schema.json
node-library-spec/notebookflow-node-hello/: README.md  pyproject.toml
node-library-spec/notebookflow-node-hello/notebookflow_node_hello/: __init__.py  node_manifest.json
scripts/: install-labextension.mjs  launch-vscode.mjs
