[project]
name = "notebookflow"
version = "0.0.0"
description = "NotebookFlow execution engine — DAG builder, executor, data bus, FastAPI server"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "NotebookFlow contributors" }]

dependencies = [
    "fastapi>=0.136.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.1.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.2",
    "matplotlib>=3.9.0",
    "pyarrow>=24.0.0",
    "watchfiles>=1.1.1",
    "croniter>=6.2.2",
    "anthropic>=0.100.0",
    "httpx>=0.28.1",
    "litellm>=1.92.0",
    "pyjwt[crypto]>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.5.7",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "ty>=0.0.1a1",
]

[project.entry-points."notebookflow.nodes"]
# Built-in node packages register here. Third-party packages do the same in
# their own pyproject.toml so registry.py picks them up automatically.
builtin = "notebookflow.nodes:register"

[project.entry-points."jupyter_serverproxy_servers"]
# Lets jupyter-server-proxy auto-launch the engine when JupyterLab boots,
# so the JupyterLab adapter can connect via a relative /proxy/<port>/ws URL
# without the user having to run `notebookflow` in another terminal.
notebookflow = "notebookflow.proxy:server_proxy_config"

[project.scripts]
notebookflow = "notebookflow.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebookflow"]

[tool.ruff]
line-length = 100
target-version = "py311"  # lowest supported; ruff lints for the floor of requires-python

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
