[project]
name = "notebookflow-node-hello"
version = "0.1.0"
description = "Hello-world third-party node for NotebookFlow — the canonical reference for the extension protocol"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NotebookFlow contributors" }]

dependencies = [
    "notebookflow",
    "pydantic>=2.13.4",
]

[project.entry-points."notebookflow.nodes"]
hello = "notebookflow_node_hello:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebookflow_node_hello"]
